Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     />
   </head>
   <body>
+    <img
+      src="http://localhost:3000/img/users/5e8d496a52838a7e9c3983a0-530.jpeg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwic3RhdHVzIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZThkNGJkNmZkNDJkNzAzNGYwMmE3NjQiLCJuYW1lIjoiSmFpbmVyIiwiZW1haWwiOiJqYWluZXIyMDIwQGdtYWlsLmNvbSIsIl9fdiI6MH0sImlhdCI6MTU4NzI3NDEyOCwiZXhwIjoxNTg5ODY2MTI4fQ.ZwDEiRClNucj0OjvMi2KSCzn00amxeXiztLwFCkKz3w"
+      alt=""
+    />
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <script>
       function onSignIn(googleUser) {
